Populated the API classes. Added validation. Added unit tests for the API classes and their validation
